[package]
name = "class_scanner_rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust library for scanning class definitions in PBO files"
license = "MIT"

[dependencies]
pbo_tools_rs = { path = "../pbo_tools_rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.6"
thiserror = "2.0.0"
chrono = { version = "0.4.39", features = ["serde"] }
regex = "1.11.1"
lazy_static = "1.5.0"
walkdir = "2.4"
clap = { version = "4.4", features = ["derive"] }
rayon = { version = "1.10.0", optional = true }
tempfile = "3.17.1"
pathdiff = "0.2.1"

[dev-dependencies]
test-case = "3.3.1"
pretty_assertions = "1.4.1"
lazy_static = "1.4"

[features]
default = []
parallel = ["rayon"]

[lints.rust]
dead_code = "allow"
unused_parens = "allow"
unused_imports = "allow"
unused_variables = "allow"
