[package]
name = "class_scanner"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A library for parsing class configuration files"
license = "MIT"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
log = "0.4.26"
env_logger = "0.11.6"
thiserror = "2.0.11"
regex = "1.11.1"
lazy_static = "1.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4.1"
rstest = "0.24.0"

[lib]
name = "class_scanner"
path = "src/lib.rs"

[lints.rust]
dead_code = "allow"
unused_parens = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"